[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-structures-py"
version = "0.1.0"
description = "A pedagogical Python package implementing core data structures from scratch"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/AudreyTiodo/data-structures-python"